--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
 <link rel="stylesheet" href="all.css">
 <body>
     <div class="bg">
-    <div class="container">
-        <div class="navbar">
-            <a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/logo.png" alt="logo"></a>
-            <a class="button" href="#">方案費用</a>
-        </div>
-        <div class="header">
-            <div class="title">
-                <h3>ChatTalker 最全面的聊天機器人</h3>
-                <h1>你愛我像誰？</h1>
-                <h1> 扮演什麼角色我都會</h1>
-                <h2>Facebook、Instagram、LINE 聊天機器人解決方案</h2>
+        <div class="container">
+            <div class="navbar">
+                <a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/logo.png" alt="logo"></a>
+                <a class="button" href="#">方案費用</a>
             </div>
-            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/home.svg" alt="home">
+            <div class="header">
+                <div class="title">
+                    <h3>ChatTalker 最全面的聊天機器人</h3>
+                    <h1>你愛我像誰？</h1>
+                    <h1> 扮演什麼角色我都會</h1>
+                    <h2>Facebook、Instagram、LINE 聊天機器人解決方案</h2>
+                </div>
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/home.svg" alt="home">
+            </div>
         </div>
-        <a class="top" href="#"><img src="top.png" alt="top"></a>
-    </div>
-    <div class="container">
+        <div class="container">
         <div class="platform">
             <h1>三大平台，我來搞定</h1>
             <ul class="social">
@@ -46,6 +45,10 @@
             </li>
             </ul>
         </div>
+        </div>
+    </div>
+    <div class="bg-ball">
+    <div class="container">   
         <div class="create">
             <h2>任何的角色，我都能給</h2>
             <h3>量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</h3>
@@ -71,39 +74,38 @@
                     <p>創造更多可能...</p>
                 </li>
             </ul>
-    </div>
-    <div class="product">
-        <ul class="pd-list">
-            <li>
-                <div class="pd-icon">
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon01.svg" alt="icon01" class="pd17">
-                </div>
-                <h3>無敵轉換術</h3>
-                <p>精準掌握客群來源 
-                <br>分析用戶轉化流程</p>
-            </li>
-            <li>
-                <div class="pd-icon">
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon02.svg" alt="icon02" class="pd17">
-                </div>
-                <h3>聊天機器人</h3>
-                <p>66款聊天機器人模組 自由設計聊天流程</p>
-            </li>
-            <li>
-                <div class="pd-icon">
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon03.svg" alt="icon03" class="pd20">
-                </div>
-                <h3>一站式訊息中心</h3>
-                <p>整合Messenger、LINE和IG三大平台訊息</p>
-            </li>
-            <li>
-                <div class="pd-icon">
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon04.svg" alt="icon04" class="pd20">
-                </div>
-                <h3>群發訊息</h3>
-                <p>自由選定特定受眾 精準推送群發訊息</p>
-            </li>
-        </ul>
+        </div>
+        <div class="product">
+            <ul class="pd-list">
+                <li>
+                    <div class="pd-icon">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon01.svg" alt="icon01" class="pd17">
+                    </div>
+                    <h3>無敵轉換術</h3>
+                    <p>精準掌握客群來源 <br>分析用戶轉化流程</p>
+                </li>
+                <li>
+                    <div class="pd-icon">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon02.svg" alt="icon02" class="pd17">
+                    </div>
+                    <h3>聊天機器人</h3>
+                    <p>66款聊天機器人模組 自由設計聊天流程</p>
+                </li>
+                <li>
+                    <div class="pd-icon">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon03.svg" alt="icon03" class="pd20">
+                    </div>
+                     <h3>一站式訊息中心</h3>
+                     <p>整合Messenger、LINE和IG三大平台訊息</p>
+                </li>
+                <li>
+                    <div class="pd-icon">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon04.svg" alt="icon04" class="pd20">
+                    </div>
+                    <h3>群發訊息</h3>
+                    <p>自由選定特定受眾 精準推送群發訊息</p>
+                </li>
+            </ul>
         <div class="pd-text">
             <h2>快速了解客戶輪廓<br>建立品牌流量池</h2>
             <p>深入用戶日常，成為用戶貼身好友
@@ -112,14 +114,16 @@
             <a href="">方案費用</a>
         </div>
     </div>
-    <div class="review">
-        <h2>好評如潮</h2>
-        <div class="review-sec">
-            <div class="review-card">
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/user01.jpg" alt="user01" class="ppl">
-                <p>原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，讓我們公司的產品用更活潑的方式讓使用者認識。</p>
-                <h3>清心寡慾設計公司</h3>
-                <div class="rank">
+    </div>
+    <div class="container">
+        <div class="review">
+            <h2>好評如潮</h2>
+            <div class="review-sec">
+                <div class="review-card">
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/user01.jpg" alt="user01" class="ppl">
+                    <p>原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，讓我們公司的產品用更活潑的方式讓使用者認識。</p>
+                    <h3>清心寡慾設計公司</h3>
+                    <div class="rank">
                     <h4>Lina 執行長</h4>
                     <div class="star">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star">
@@ -129,12 +133,12 @@
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star2">
                     </div>
                 </div>
-            </div>
-            <div class="review-card display-none">
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/user02.jpg" alt="user02"  class="ppl">
-                <p>團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</p>
-                <h3>subwhat 行銷公司</h3>
-                <div class="rank">
+                </div>
+                <div class="review-card display-none">
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/user02.jpg" alt="user02"  class="ppl">
+                    <p>團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</p>
+                    <h3>subwhat 行銷公司</h3>
+                    <div class="rank">
                     <h4>Zoe 活動長</h4>
                     <div class="star">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star">
@@ -144,14 +148,14 @@
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star2">
                     </div>
                 </div>
-            </div>
-            <div class="review-card display-none">
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/user03.jpg" alt="user03"  class="ppl">
-                <p>經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</p>
-                <h3>油土伯</h3>
-                <div class="rank">
-                    <h4>HowBig</h4>
-                    <div class="star">
+                </div>
+                <div class="review-card display-none">
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/user03.jpg" alt="user03"  class="ppl">
+                    <p>經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</p>
+                    <h3>油土伯</h3>
+                    <div class="rank">
+                        <h4>HowBig</h4>
+                        <div class="star">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star2">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star">
@@ -159,10 +163,11 @@
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/icon_star.svg" alt="star2">
                     </div>
                 </div>
+                </div>
             </div>
         </div>
+    </div> 
     </div>
-    </div>  
     <div class="footer-plan">
         <div class="container">
             <h2>\ 美好用戶體驗，從對話開始 /</h2>
@@ -174,5 +179,6 @@
             <p>© 2022 chatTalker. All Rights Reserved.</p>
         </div>
     </div> 
+    <a class="top" href="#"><img src="top.png" alt="top"></a>
 </body>
 </html>
